# IndustryLibDemo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
core/: main.c
core/algo/: CMakeLists.txt  angle.c  angle.h  detect.c  detect.h
core/base/: CMakeLists.txt  imgproc.c  imgproc.h  log.c  log.h  net.c  net.h  plc_sim.c  plc_sim.h
core/flow/: flow.h  flow_common.c  flow_customer_a.c  flow_customer_b.c
tools/: demo.ps1  show_deps.ps1  verify_tcp.py
ui/: ui_python.py
ui/web/: bridge.py  index.html
